<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2023 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
  <string name="app_name">Shopping List V3</string>
  <string name="Title">Lizzie\'s Shopping List</string>
  <string name="DisplayModePlanning">Planning</string>
  <string name="DisplayModeShopping">Shopping</string>
  <string name="DescriptionHeading">Description</string>
  <string name="CategoryHeading">Category</string>
  <string name="StoreHeading">Store</string>
  <string name="AisleHeading">Aisle</string>
  <string name="ImportItems">Import Items</string>
  <string name="ExportItems">Export Items</string>
  <string name="AddItem">Add Item...</string>
  <string name="ShowSearch">Search</string>
  <string name="Refresh">Refresh</string>
  <string name="FilterByStore">Filter By Store</string>
  <string name="ClearCheckedItems">Clear Checked Items</string>
  <string name="NoItems">To add items, use the menu.</string>
  <string name="NoItemsNeeded">Hooray, no items needed!</string>
  <string name="NoItemsNeededAtStore">Hooray, no items needed at %s!</string>
  <string name="ClearSearch">Clear</string>
  <string name="HideSearch">Hide</string>
  <string name="ClearCheckedItemsWarning">This cannot be undone.</string>
  <string name="ImportItemsWarning">This will delete all the existing items and import new items.</string>
  <string name="AreYouSure">Are you sure?</string>

  <string name="edit_item_title">Shopping List - Edit Item</string>
  <string name="Description">Description:</string>
  <string name="Category">Category:</string>
  <string name="AddCategory">Add Category...</string>
  <string name="Aisle">Aisle:</string>
  <string name="AddAisle">Add Aisle...</string>
  <string name="Stores">Stores:</string>
  <string name="ChooseStores">Choose Stores...</string>
  <string name="LastPurchased">Last Purchased:</string>
  <string name="AutoDelete">Auto-delete</string>
  <string name="DeleteNow">Delete Now</string>
  <string name="DeleteNowConfirm">Are you sure you want to delete this item?</string>

  <string name="choose_stores_title">Shopping List - Choose Stores</string>
  <string name="AddStore">Add Store...</string>
</resources>
