<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2023 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/black">
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#FF555555">
      <TextView
        android:id="@+id/displayMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:gravity="left"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FF00FFFF" />
      <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="1dp" />
      <Spinner
        android:id="@+id/storeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:backgroundTint="#FF00FFFF"
        android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
      android:id="@+id/searchArea"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:layout_marginBottom="2dp"
      android:visibility="gone">
      <EditText
        android:id="@+id/searchBox"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:padding="4dp"
        android:layout_gravity="center_vertical"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:inputType="text" />
      <Button
        android:id="@+id/searchClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="10sp"
        android:minHeight="0dp" android:minWidth="0dp"
        android:text="@string/ClearSearch" />
      <Button
        android:id="@+id/searchHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="10sp"
        android:minHeight="0dp" android:minWidth="0dp"
        android:text="@string/HideSearch" />
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/firstHeading"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/DescriptionHeading"
        android:textStyle="bold"
        android:textColor="@android:color/white" />
      <TextView
        android:id="@+id/secondHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="right"
        android:textStyle="bold"
        android:textColor="@android:color/white" />
    </LinearLayout>
    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
        android:id="@+id/items"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>
  </LinearLayout>
</FrameLayout>
